load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

# keep sorted
_srcs = [
    "ecsact/detail/grammar.hh",
    "ecsact/ecsact_parse_statement.cc",
]

# keep sorted
_hdrs = [
    "ecsact/parse.h",
    "ecsact/parse/error.h",
    "ecsact/parse/statements.h",
    "ecsact/parse/status.h",
    "ecsact/parse/string.h",
]

# keep sorted
_deps = [
    "@ecsact_runtime//:common",
    "@ecsact_runtime//:definitions",
    "@lexy",
    "@magic_enum",
]

cc_library(
    name = "ecsact_parse",
    srcs = _srcs,
    hdrs = _hdrs,
    copts = copts,
    deps = _deps,
)
