load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:copts.bzl", "copts")

# keep sorted
_TESTS = [
    "action_statement",
    "component_statement",
    "entity_constraint_statement",
    "field_statement",
    "import_statement",
    "none_statement",
    "package_statement",
    "sequential_statements",
    "system_component_statement",
    "system_generates_statement",
    "system_statement",
    "system_with_entity_statement",
    "unknown_statement",
]

[cc_test(
    name = test,
    srcs = ["parse_test_{}.cc".format(test)],
    copts = copts,
    deps = [
        "//:ecsact_parse",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
) for test in _TESTS]
